fix:better solution for overflow filters

--- a/frappe/public/less/filters.less
+++ b/frappe/public/less/filters.less
@@ -2,7 +2,7 @@
 
 .active-tag-filters {
 	display: flex;
-	overflow: scroll;
+	flex-wrap: wrap;
 	.filter-button, .filter-tag {
 		margin: 0 10px 10px 0;
 	}
